--- a/EmQuick/app/src/main/res/layout/idscanner.xml
+++ b/EmQuick/app/src/main/res/layout/idscanner.xml
@@ -12,4 +12,13 @@
         android:layout_marginTop="28dp"
         android:id="@+id/textView"
         android:textSize="20sp" />
+
+    <Button
+        android:text="Scan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="29dp"
+        android:id="@+id/scan" />
 </RelativeLayout>
